+ Added ability to copy scheduler items. [Jeroen]
+ Added email functionality to scheduler so employees get notified by the
  scheduler by email when an event is triggered. [Guido]
+ Added scheduler email system which for example sends an email to you
  when you are invited to an appointment in the scheduler. [Sandy,Guido]
+ Added support for .sql install/patch files. [Sandy]
* Fixed some PHP Notices. [Guido]
* Fixed minor layout issues in the scheduler. [Guido]
* Added missing dutch translations into the scheduler. [Guido]
* Fixed some scheduler email template codes not being parsed. [Guido]
* Fixed SQL errors when performing operations on scheduler attendees. [Guido]
* Partially fixed issues with recurring appointments that end after # times.
  [Guido]
* Now we use the recipients language, when sending timeguard reminder email
  to an employee. [Yury]
* Fixed adding todos which caused an SQL error. [Dennis]
* Fixed aggregation of unsorted columns [Guido,Jeroen]
* Removed executable bit (svn:executable property in svn) from files that
  aren't executable. [Guido]
* Fixed translation issues in the scheduler. [Guido]
* Fixed error when using the moon phases feature while the server doesn't have
  the calendar module enabled. [Guido]
* Beautified the scheduler recurring settings interface. [Guido]
* Fixed cancel button in hours move page still moving the hours to the
  selected project, phase and activity. This also happened when no
  project/phase/activity was selected, so it effectively made the time
  registrations invalid. [Guido]
* Updated jpgraph to version 2.3 (php5 version) (bug #924) [Sandy]
* Updated default width of graphs to 750px. [Sandy]
* Fixed currency symbol in organization contracts and projects. [Sandy]
* Moved all configs to module specific config files in /configs. [Sandy]
* Available themes are now cached in 
  achievotmp/themes/available_themes.inc [Sandy]
  
Changes in Achievo 1.3.3
------------------------